# frankie

./: .env.example  .gitignore  GUIDE.md  LICENSE  Makefile  PLAN.md  README.md  SESSION.md  deploy.sh  pyproject.toml  watch.ps1
data/hackmi_docs/: HackMI_AICollective_Challenge.txt  HackMI_AI_Challenges.txt  HackMI_DTE_Energy_Challenge.txt  HackMI_StartMidwest_Challenge.txt  Hack_Michigan_Challenge_Information.txt  Hack_Michigan_Hackathon_Guide.txt  Hack_Michigan_Official_Rules.txt  Hackathon_Exercise_Guide.txt  IBM-bob-free-trial-Hack-Michigan_2_.txt
docs/: 01_hardware_overview.md  02_wiring_diagram.md  03_calibration_guide.md
docs/submission/: demo_script.md  devpost_writeup.md  gamma_pitch_deck.md  kaggle_writeup.md  michigan_impact.md  submission_writeup.md  watsonx_usage.md
frontend/: app.js  index.html  styles.css
scripts/: _base_test.sh  _check_chess_deps.sh  _extract_hackmi_docs.py  _grid_preview.py  _gripper_probe.sh  _patch_base_cal.sh  _probe_cubes.py  _probe_ik.py  _probe_ik2.py  _probe_markers.py  _rename_to_frankie.py  _smoke_arc1.sh  _test_all_modes.sh  _test_chess.py  _test_command.sh  _test_features_kb.py  _test_free_mode.sh  _test_pick_place.sh  _test_pick_place_inverse.sh  _test_pick_place_plusy.sh  _test_pick_place_reverse.sh  _test_router.py  _test_toolship_parse.py  _verify_keys.py  _verify_keys.sh  add_env_key.sh  calibrate_servos.py  calibrate_workspace.py  check_hardware.py  generate_markers.py  measure_arm.py  seed_defect_kb.py  test_motion.py  test_vision.py
src/frankie/: __init__.py  config.py  logging_config.py  main.py  safety.py  state.py
src/frankie/api/: calibration.py  models.py  routes.py  websocket.py
src/frankie/hardware/: __init__.py  arm.py  calibration.py  kinematics.py  servo_driver.py  simulator.py
src/frankie/modes/: __init__.py  base.py  chess.py  defect.py  free.py  toolship.py
src/frankie/reasoning/: __init__.py  defect_kb.py  granite.py  prompts.py  router.py  watsonx_stub.py
src/frankie/services/: __init__.py  calibration_watcher.py  events.py
src/frankie/storage/: __init__.py  chat.py
src/frankie/vision/: __init__.py  aruco.py  camera.py  claude_vision.py  features.py  workspace.py
systemd/: frankie.service  mediamtx.service
tests/: conftest.py  test_api.py  test_arm.py  test_aruco.py  test_calibration.py  test_camera.py  test_defect_kb.py  test_features.py  test_imports.py  test_kinematics.py  test_safety.py  test_servo_driver.py  test_workspace.py
