[project]
name = "frankie"
version = "0.1.0"
description = "AI-powered robotic apprentice for Michigan manufacturing shops"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sudarshan Sridhar" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "opencv-python>=4.10",
    "numpy>=1.26",
    "ikpy>=3.4",
    "anthropic>=0.40",
    "python-chess>=1.10",
    "stockfish>=3.28",
    "structlog>=24.4",
    "aiofiles>=24.1",
    "websockets>=13",
    "httpx>=0.27",
    "Pillow>=10.0",
    "readchar>=4.0",
    "python-multipart>=0.0.28",
]

[project.optional-dependencies]
hardware = [
    "adafruit-circuitpython-pca9685>=3.4",
    "adafruit-circuitpython-servokit>=1.3",
    "adafruit-blinka>=8.0",
    "lgpio>=0.2; sys_platform == 'linux'",
    "smbus2>=0.5",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-aiofiles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frankie"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle, pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "SIM",               # simplify
    "ASYNC",             # async pitfalls
    "RUF",               # ruff
    "N",                 # naming
    "C4",                # comprehensions
    "PIE",
    "PL",                # pylint subset
    "TCH",               # type-checking
]
ignore = [
    "PLR0913",           # too many arguments
    "PLR2004",           # magic value in comparison (allowed when documented)
    "E501",              # let formatter handle long lines
    "PLC0415",           # lazy/conditional imports are required for hardware-vs-simulator split
    "TC001",             # runtime-typed imports kept eager so isinstance checks work
    "TC003",
    "PLR0915",           # large lifespan/init functions are fine
    "PLR0911",           # mode handlers naturally return ModeResponse per branch
    "PLR0912",           # mode handlers naturally branch per error path
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "N802"]
"scripts/*" = ["T201", "PLR0912", "PLR0915", "BLE001"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/", "scripts/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "ikpy.*",
    "stockfish.*",
    "adafruit_pca9685.*",
    "adafruit_servokit.*",
    "board",
    "busio",
    "readchar.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
